Add historical month carryovers
