# backend/openapi.yaml
@@ -2546,6 +2546,22 @@ components:
           maximum: 9223372036854775807
           minimum: 0
           format: int64
+        actual_paid_amount:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
+        carryover_credit:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
         paid_amount:
           type: number
           format: double
@@ -2555,6 +2571,14 @@ components:
           exclusiveMinimum: true
           readOnly: true
         remaining_amount:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
+        overpaid_amount:
           type: number
           format: double
           maximum: 1000000000000
@@ -2743,6 +2767,22 @@ components:
           maximum: 9223372036854775807
           minimum: 0
           format: int64
+        actual_paid_amount:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
+        carryover_credit:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
         paid_amount:
           type: number
           format: double
@@ -2752,6 +2792,14 @@ components:
           exclusiveMinimum: true
           readOnly: true
         remaining_amount:
+          type: number
+          format: double
+          maximum: 1000000000000
+          minimum: -1000000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
+        overpaid_amount:
           type: number
           format: double
           maximum: 1000000000000
@@ -2771,11 +2819,14 @@ components:
           format: date-time
           readOnly: true
       required:
+      - actual_paid_amount
+      - carryover_credit
       - created_at
       - due_date
       - expected_amount
       - id
       - name
+      - overpaid_amount
       - paid_amount
       - remaining_amount
       - status
